# bender_core

./: .gitignore  .gitmodules  .gitmodules_bkp  README.md
bender_calibrate/: CMakeLists.txt  package.xml  setup.py
bender_calibrate/launch/: asus_head_depth_calibration.launch  camera_right_eye_calibration.launch
bender_calibrate/src/: cameracalibrator.py
bender_calibration/: .gitignore  CMakeLists.txt  package.xml
bender_calibration/config/: calibrate_gazebo.yaml  capture_calibrate.yaml
bender_calibration/launch/: calibrate.launch  calibrate2.launch  calibrate_gazebo.launch  capture.launch  capture_checkerboards.launch  capture_manual.launch  capture_with_ground.launch
bender_calibration/scripts/: calibrate_robot
bender_common/bender_common/: CMakeLists.txt  package.xml
bender_common/bender_description/: .gitignore  CMakeLists.txt  package.xml
bender_common/bender_description/calibration/: calibration_1480519486.yaml
bender_common/bender_description/config/: bender_display.rviz  config.rviz
bender_common/bender_description/install/: install.sh
bender_common/bender_description/launch/: display.launch
bender_common/bender_description/robots/: .gitignore  bender.gv  bender.sdf  bender.urdf  bender2.urdf  bender_asus.sdf  bender_asus.urdf  bender_asus.urdf.xacro  bender_base.urdf.xacro  bender_both.sdf  bender_both.urdf  bender_both.urdf.xacro  bender_calibration.urdf.xacro  bender_kinect.sdf  bender_kinect.urdf  bender_kinect.urdf.xacro  bender_light_head.sdf  bender_light_head.urdf  bender_light_head.urdf.xacro  bender_light_head_calibration.sdf  bender_light_head_calibration.urdf  bender_light_head_calibration.urdf.xacro  bender_mask_head.sdf  bender_mask_head.urdf  bender_mask_head.urdf.xacro  bender_mask_head_calibration.urdf.xacro  bender_standard.urdf.xacro
bender_common/bender_description/scripts/: install.sh  load_calibration.sh  save_calibration.sh  update_models.sh
bender_common/bender_description/urdf/: arm.urdf.xacro  asus_dynamixel.urdf.xacro  asus_xtion_pro.urdf.xacro  base.urdf.xacro  body.urdf.xacro  common.xacro  gazebo.urdf.xacro  gripper.urdf.xacro  head.urdf.xacro  laser_sensor.xacro  light_head.urdf.xacro  mask_head.urdf.xacro  torso.urdf.xacro
bender_common/bender_msgs/: CMakeLists.txt  package.xml
bender_common/bender_msgs/msg/: BlobList.msg  Command.msg  CylindricalObject.msg  Emotion.msg  FKinfo.msg  MarkerArray.msg  ObjectDetection.msg  OclusionData.msg  PlaneDetection.msg  PoseDetections.msg  ROIArray.msg  ServoCommand.msg  ServoState.msg  SiftDetection.msg  SiftDetectionDepth.msg  SiftDetectionFloor.msg  StateInfo.msg  WaveData.msg  baseArmState.msg  grip.msg
bender_common/bender_srvs/: CMakeLists.txt  package.xml
bender_common/bender_srvs/srv/: AngVel.srv  ArmCommand.srv  ArmState.srv  AskQuestion.srv  BlobList.srv  Bool.srv  DoorDetector.srv  FaceInfo.srv  FaceRecognition.srv  Feedback.srv  GenderDetection.srv  GripperInfo.srv  ID.srv  ImageDetection.srv  ImageDetector.srv  ImageReport.srv  LoadMode.srv  Margin.srv  NavGoal.srv  ObjectDetection.srv  PlanIKGoal.srv  (+36 more)
bender_common/bender_tf/: CMakeLists.txt  package.xml
bender_common/uchile_msgs/: CMakeLists.txt
bender_common/uchile_srvs/: CMakeLists.txt  package.xml
bender_core/: CMakeLists.txt  README.md  package.xml  setup.py
bender_core/bash/: setup.sh
bender_core/bender_base/: CMakeLists.txt  package.xml
bender_core/bender_calibrate/: CMakeLists.txt
bender_core/bender_fieldbus/: CMakeLists.txt  package.xml
bender_core/bender_head/: package.xml
bender_core/bender_sound/: CMakeLists.txt
bender_core/bender_tts/: CMakeLists.txt
bender_core/launch/: core.launch  core_blue.launch  core_gray.launch  core_green.launch  gazebo.launch  hardware.launch
bender_core/samples/: arm_bot.py  camera_bot.py  corebot.py  gripper_bot.py  gripper_test.py  head_bot.py  knowledge_bot.py  light_head_bot.py  testbot.py
bender_core_tools/bender_laser_pipeline/: CMakeLists.txt  README.md  bender_laser_pipelne_plugins.xml  package.xml
bender_core_tools/bender_utils/: CMakeLists.txt  package.xml  setup.py
bender_fieldbus/: CMakeLists.txt  setup.py
bender_fieldbus/config/: l_port.yaml  r_port.yaml  test_port.yaml
bender_fieldbus/install/: install.sh
bender_gripper/: CMakeLists.txt  package.xml
bender_gripper/cfg/: GripperParams.cfg
bender_gripper/config/: l_gripper_controller.yaml  r_gripper_controller.yaml
bender_hand/: CMakeLists.txt
bender_hand/config/: hand_controller.yaml
bender_hand/launch/: hand.launch
bender_hardware/bender_arm_control/: CMakeLists.txt  package.xml  setup.py
bender_hardware/bender_base/: CMakeLists.txt  package.xml
bender_head/: CMakeLists.txt  package.xml
bender_head/config/: face_controller.yaml  head_controller.yaml
bender_head/install/: bender_head.rules  install.sh
bender_head/launch/: face.launch
bender_head/scripts/: test_face.py
bender_head/shell/: setup.sh  shell_tools.sh
bender_joy/: CMakeLists.txt  README.md  package.xml  setup.py
bender_joy/config/: joystick_base.yaml  joystick_tts.yaml  proxy.yaml
bender_joy/install/: install.sh  run.sh
bender_joy/src/: bender_speaker.py  joy_base.py  joy_base_only_face.py  joy_base_only_head.py  joy_head.py  joy_proxy.py  joy_tts.py
bender_msgs/: CMakeLists.txt  package.xml
bender_msgs/msg/: Emotion.msg  Expression.msg  Face.msg  Joyino.msg  Mouth.msg
bender_sensors/: CMakeLists.txt  package.xml
bender_sensors/install/: cameras.sh  install.sh  lasers.sh
bender_sensors/shell/: depth_devices.sh  laser_devices.sh
bender_sensors/src/: laser_inverter.cpp
bender_sound/: CMakeLists.txt
bender_sound/src/: sound_player.cpp
bender_ssl/: CMakeLists.txt  package.xml
bender_ssl/action/: Locate.action
bender_ssl/launch/: sound_localization.launch
bender_ssl/src/: Annie.py  AreYouTalking.py  Prom.py  Seteador.py  locate_sound.py  marker_code.py  tester2.py
bender_tts/: CMakeLists.txt  README.md
bender_tts/install/: install.sh  settings.bash
bender_tts/launch/: tts.launch
bender_tts/shell/: setup.bash  setup.sh
bender_utils/: package.xml
(+1565 files in other folders)
