<?xml version="1.0"?>
<package>
  <name>bender_srvs</name>
  <version>0.0.0</version>
  <description>The bender_srvs package</description>
  <maintainer email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</maintainer>
  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>  
  <run_depend>bender_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


  <export>
  </export>
</package>