<?xml version="1.0"?>
<package>
  <name>bender_tf</name>
  <version>0.0.0</version>
  <description>The bender_tf package</description>
  <maintainer email="bender.contacto@gmail.com">Bender Team - UChile Homebreakers</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>
  <run_depend>catkin</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
  </export>
</package>