<?xml version="1.0"?>
<package format="2">
    <!-- 
      <depend>             : build, export, and execution dependencies 
      <build_depend>       : pkgs needed at compile time (any file or library)
      <build_export_depend>: pkgs needed to build libraries against this pkg
      <exec_depend>        : pkgs needed to run this code. (e.g: shared libs)
      <test_depend>        : only additional deps for unit testing (e.g: gtest)
      <doc_depend>         : dependencies for documentation generation

      See also:
      - http://wiki.ros.org/catkin/package.xml
      - http://www.ros.org/reps/rep-0140.html
    -->


    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>uchile_srvs</name>
    <version>2.0.0</version>
    
    <description>ROS srv definitions for robot Bender.</description>
    <maintainer email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</author>
    <license>TODO</license>

    <!-- about bender and related repository -->
    <url type="website">bender.li2.uchile.cl</url>
    <url type="bugtracker">
      https://bitbucket.org/uchile-robotics-die/bender_base_layer/issues</url>
    <url type="repository">
      https://bitbucket.org/uchile-robotics-die/bender_base_layer</url>


    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>


    <!-- build, export, and execution dependencies -->
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>uchile_msgs</depend>


    <!-- build dependencies -->
    <build_depend>message_generation</build_depend>


    <!-- export dependencies -->
    <!-- -->


    <!-- excution dependencies -->
    <exec_depend>message_runtime</exec_depend>


    <!-- test dependencies -->
    <!-- -->


    <!-- documentation dependencies -->
    <!-- -->

    <export>
    </export>

</package>